minor changes for aesthetic

--- a/Testing/Motor1 Dynamic/data.ipynb
+++ b/Testing/Motor1 Dynamic/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +83,13 @@
     "}\n",
     "\n",
     "\n",
-    "with open(os.path.join(FOLDER, 'Values.json'), \"w\") as file_place:\n",
+    "with open(os.path.join(FOLDER, f'{EXP_NAME}.json'), \"w\") as file_place:\n",
     "    json.dump(values, file_place)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
     "    ax.legend()\n",
     "\n",
     "fig.savefig(f'{title}.svg',format='svg',bbox_inches = \"tight\")\n",
-    "# fig.savefig(f'{title}.png',format='png',bbox_inches = \"tight\")"
+    "fig.savefig(f'{title}.png',format='png',bbox_inches = \"tight\")"
    ]
   }
  ],
