--- a/Testing/Motor1 -1~1 14062023/data.ipynb
+++ b/Testing/Motor1 -1~1 14062023/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +82,13 @@
     "}\n",
     "\n",
     "\n",
-    "with open(os.path.join(FOLDER, 'Values.json'), \"w\") as file_place:\n",
+    "with open(os.path.join(FOLDER, f'{EXP_NAME}.json'), \"w\") as file_place:\n",
     "    json.dump(values, file_place)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
     "    ax.legend()\n",
     "\n",
     "fig.savefig(f'{title}.svg',format='svg',bbox_inches = \"tight\")\n",
-    "# fig.savefig(f'{title}.png',format='png',bbox_inches = \"tight\")"
+    "fig.savefig(f'{title}.png',format='png',bbox_inches = \"tight\")"
    ]
   }
  ],
