--- a/Testing/Motor2 -5~5 16062023/data.ipynb
+++ b/Testing/Motor2 -5~5 16062023/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,13 @@
     "            if \"Torque\" in col: target_columns.append(col)\n",
     "        data = data[target_columns]\n",
     "        # print(file.split(\".\"))\n",
-    "        input = int(file[1:3])/10.0\n",
+    "        input = int(file.split(\".\")[0][1:])/10.0\n",
     "        files.append([input, data])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +82,13 @@
     "}\n",
     "\n",
     "\n",
-    "with open(os.path.join(FOLDER, 'Values.json'), \"w\") as file_place:\n",
+    "with open(os.path.join(FOLDER, f'{EXP_NAME}.json'), \"w\") as file_place:\n",
     "    json.dump(values, file_place)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
