--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -99,7 +99,364 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import datetime as dt\n",
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
+    "import serial\n",
+    "from time import sleep\n",
+    "\n",
+    "\n",
+    "ENTER = bytes([0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFC])\n",
+    "EXIT = bytes([0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFD])\n",
+    "ZERO = bytes([0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFE])\n",
+    "\n",
+    "\n",
+    "# AK70-10 24V Motor Limit\n",
+    "P_MIN = -12.5\n",
+    "P_MAX = 12.5\n",
+    "V_MIN = -50  \n",
+    "V_MAX = 50\n",
+    "T_MIN = -25 \n",
+    "T_MAX = 25\n",
+    "KP_MIN = 0\n",
+    "KP_MAX = 500\n",
+    "KD_MIN = 0\n",
+    "KD_MAX = 5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unpack(data):\n",
+    "    id = data[0]\n",
+    "    pos = ((data[1]*(P_MAX-P_MIN))/(pow(2,16)-1)) + P_MIN\n",
+    "    vel = ((data[2]*(V_MAX-V_MIN))/(pow(2,12)-1)) + V_MIN\n",
+    "    tor = ((data[3]*(T_MAX-T_MIN))/(pow(2,12)-1)) + T_MIN\n",
+    "    return id, pos, vel, tor\n",
+    "\n",
+    "def receive():\n",
+    "    global dT, pos1_old, pos2_old\n",
+    "    # Read the response from the serial port\n",
+    "    received = ser.readline().decode().split()      \n",
+    "\n",
+    "    # Print the received bytes\n",
+    "    # print(\"Received:\", received)\n",
+    "\n",
+    "    try:\n",
+    "        test = int(received[0])\n",
+    "        response = [int(x) for x in received]\n",
+    "        [id, p, v, t] = unpack(response)\n",
+    "\n",
+    "        if id == 1:\n",
+    "            p = -round(p,3)\n",
+    "            if dT == 0:\n",
+    "                v = 0\n",
+    "            else:\n",
+    "                v = round((p - pos1_old)/dT,2)\n",
+    "        \n",
+    "        else:\n",
+    "            p = round(p,3)\n",
+    "            if dT == 0:\n",
+    "                v = 0\n",
+    "            else:\n",
+    "                v = round((p-pos2_old)/dT,2)\n",
+    "\n",
+    "        # print the response from the Arduino\n",
+    "        # print([id, p, v, t])\n",
+    "\n",
+    "    except (IndexError, ValueError):\n",
+    "        id = None\n",
+    "        p = 0\n",
+    "        v = 0\n",
+    "    return id, p, v\n",
+    "\n",
+    "def pack_cmd(p_des, v_des, t_ff, kp, kd):\n",
+    "    bufs = []\n",
+    "    def float_to_uint(val, val_min, val_max, bits):\n",
+    "        val_norm = (val - val_min) / (val_max - val_min)\n",
+    "        val_int = int(round(val_norm * ((1 << bits) - 1)))\n",
+    "        return val_int\n",
+    "    \n",
+    "    p_int = float_to_uint(p_des, P_MIN, P_MAX, 16)\n",
+    "    v_int = float_to_uint(v_des, V_MIN, V_MAX, 12)\n",
+    "    t_int = float_to_uint(t_ff, T_MIN, T_MAX, 12)\n",
+    "    kp_int = float_to_uint(kp, KP_MIN, KP_MAX, 12)\n",
+    "    kd_int = float_to_uint(kd, KD_MIN, KD_MAX, 12)\n",
+    "    \n",
+    "    bufs.append((p_int >> 8) & 0xFF)\n",
+    "    bufs.append(p_int & 0xFF)\n",
+    "    bufs.append((v_int >> 4) & 0xFF)\n",
+    "    bufs.append(((v_int & 0xF) << 4) | ((kp_int >> 8) & 0xF))\n",
+    "    bufs.append(kp_int & 0xFF)\n",
+    "    bufs.append((kd_int >> 4) & 0xFF)\n",
+    "    bufs.append(((kd_int & 0xF) << 4) | ((t_int >> 8) & 0xF))\n",
+    "    bufs.append(t_int & 0xFF)\n",
+    "\n",
+    "    return bufs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set Zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Begining\")\n",
+    "# open the serial port\n",
+    "ser = serial.Serial('/dev/cu.usbserial-14110', 115200, timeout=1)\n",
+    "\n",
+    "\n",
+    "q1_old = 0\n",
+    "pos2_old = 0\n",
+    "\n",
+    "#M1\n",
+    "print(\"Starting Zero Position M1\")\n",
+    "ser.write(bytes([0x01])+ZERO)\n",
+    "sleep(3)\n",
+    "[id, p, v] = receive()\n",
+    "p = 5\n",
+    "while abs(p) >= 0.001:\n",
+    "    ser.write(bytes([0x01])+ZERO)\n",
+    "    sleep(3)\n",
+    "    [id, p, v] = receive()\n",
+    "\n",
+    "\n",
+    "\n",
+    "#M2\n",
+    "print(\"Starting Zero Position M2\")\n",
+    "ser.write(bytes([0x02])+ZERO)\n",
+    "sleep(3)\n",
+    "[id, p, v] = receive()\n",
+    "p = 5\n",
+    "while abs(p) >= 0.001:\n",
+    "    ser.write(bytes([0x02])+ZERO)\n",
+    "    sleep(3)\n",
+    "    [id, p, v] = receive()\n",
+    "\n",
+    "print(\"Finishing Zero Position\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enter Motor and Re-bias Force Sensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Motor\n",
+    "\n",
+    "#M1\n",
+    "print(\"Starting Enter Motors\")\n",
+    "ser.write(bytes([0x01])+ENTER)\n",
+    "[id, p, v] = receive()\n",
+    "if id == 1:\n",
+    "    q1 = -p\n",
+    "    vel1 = v\n",
+    "\n",
+    "elif id == 2:\n",
+    "    q2 = p\n",
+    "    vel2 = v\n",
+    "\n",
+    "#M2\n",
+    "ser.write(bytes([0x02])+ENTER)\n",
+    "[id, p, v] = receive()\n",
+    "\n",
+    "if id == 1:\n",
+    "    q1 = -p\n",
+    "    vel1 = v\n",
+    "\n",
+    "elif id == 2:\n",
+    "    q2 = p\n",
+    "    vel2 = v\n",
+    "\n",
+    "q1_old = q1\n",
+    "q2_old = q2\n",
+    "\n",
+    "\n",
+    "##Sensor\n",
+    "CALFILEPATH = \"..\\FT44764\\FT44764.cal\"\n",
+    "INDEX = 1\n",
+    "\n",
+    "with nidaqmx.Task() as task:\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
+    "    \n",
+    "    bias = task.read()\n",
+    "    reading = task.read()\n",
+    "\n",
+    "sampleTT = [0,0,-85,0,0,0]\n",
+    "\n",
+    "#Bias\n",
+    "sensor = ati.FTSensor()\n",
+    "cal = sensor.createCalibration(CALFILEPATH, INDEX)\n",
+    "sensor.setForceUnits(\"N\".encode(\"utf-8\"))\n",
+    "sensor.setTorqueUnits(\"N-m\".encode(\"utf-8\"))\n",
+    "sensor.setToolTransform(sampleTT, \"mm\".encode(\"utf-8\"), \"deg\".encode(\"utf-8\"))\n",
+    "\n",
+    "sensor.bias(bias)\n",
+    "output = sensor.convertToFt(reading)\n",
+    "output\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = dt.datetime.today().timestamp()\n",
+    "t = 0\n",
+    "l1 = 0.275\n",
+    "l2 = 0.24\n",
+    "l4 = 0.01\n",
+    "q0 = np.deg2rad(18)\n",
+    "logs = list()\n",
+    "readings = list()\n",
+    "\n",
+    "task = nidaqmx.Task()\n",
+    "\n",
+    "\n",
+    "print(\"Start Controling\")\n",
+    "while t < duration:\n",
+    "    start_time = dt.datetime.today().timestamp()\n",
+    "\n",
+    "    log = list()\n",
+    "    log.append(t)\n",
+    "\n",
+    "    q1_old = q1\n",
+    "    q2_old = q2\n",
+    "\n",
+    "\n",
+    "\n",
+    "    T1 = 0.5\n",
+    "    T2 = 0.5\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    log.append(T1)\n",
+    "    log.append(T2)\n",
+    "\n",
+    "\n",
+    "    command1 = bytes(pack_cmd(0,0,-T1,0,0)) #(pos,vel,torque,kp,kd)\n",
+    "    command2 = bytes(pack_cmd(0,0,T2,0,0)) #(pos,vel,torque,kp,kd)\n",
+    "\n",
+    "    #M1\n",
+    "    ser.write(bytes([0x01])+command1)\n",
+    "    [id, p, v] = receive()\n",
+    "\n",
+    "    if id == 1:\n",
+    "        q1 = -p\n",
+    "        vel1 = -v\n",
+    "    \n",
+    "    elif id == 2:\n",
+    "        q2 = p\n",
+    "        vel2 = v\n",
+    "\n",
+    "    #M2\n",
+    "    ser.write(bytes([0x02])+command2)\n",
+    "    [id, p, v] = receive()\n",
+    "\n",
+    "    if id == 1:\n",
+    "        q1 = -p\n",
+    "        vel1 = -v\n",
+    "    \n",
+    "    elif id == 2:\n",
+    "        q2 = p\n",
+    "        vel2 = v\n",
+    "\n",
+    "\n",
+    "    log.append(q1)\n",
+    "    log.append(q2)\n",
+    "\n",
+    "    x = l1*np.sin(q1) + l2*np.cos(q2)\n",
+    "    y = l1*np.cos(q1) - l2*np.sin(q2)\n",
+    "\n",
+    "    log.append(x)\n",
+    "    log.append(y)\n",
+    "\n",
+    "\n",
+    "    #Estimate CF\n",
+    "    A = q0-q1+2*q2\n",
+    "    B = q0-q1\n",
+    "    C = q0-2*q1+q2\n",
+    "    D = q0+q2\n",
+    "    Fx = -((T1*l2*(np.sin(A)+np.sin(B))+T2*l1*(np.sin(C)-np.sin(D)))/(l1*l2*(np.sin(q0)+np.sin(q0-2*q1+2*q2))))\n",
+    "    Fy = (T1*l2*(np.cos(B)+np.cos(C))+T2*l1*(np.cos(D)-np.cos(A))/(l1*l2*(np.sin(q0)+np.sin(q0-2*q1+2*q2))))    \n",
+    "\n",
+    "    log.append(Fx)\n",
+    "    log.append(Fy)\n",
+    "\n",
+    "\n",
+    "    #Sensor\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
+    "\n",
+    "    reading = sensor.convertToFt(task.read())\n",
+    "    #print(reading)\n",
+    "    log.append([reading])\n",
+    "    readings.append(reading)\n",
+    "\n",
+    "    logs.append([log])\n",
+    "    \n",
+    "    print(\"Progress\", f'{round(t/duration*100,3)}%')\n",
+    "    dT = dt.datetime.today().timestamp()-start_time\n",
+    "    t+= dT\n",
+    "\n",
+    "ser.write(bytes([0x01])+EXIT)\n",
+    "receive()\n",
+    "\n",
+    "#M2\n",
+    "ser.write(bytes([0x02])+EXIT)\n",
+    "receive()\n",
+    "    \n",
+    "\n",
+    "print(\"finish\")\n",
+    "print(logs)\n"
+   ]
   }
  ],
  "metadata": {
