--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -680,8 +680,11 @@
     "\n",
     "  \n",
     "    #print(reading)\n",
-    "    log.append(reading)\n",
+    "    \n",
     "    readings.append(reading)\n",
+    "\n",
+    "    log.append(-reading[1])\n",
+    "    log.append(-reading[0])\n",
     "\n",
     "    logs.append(log)\n",
     "    \n",
@@ -752,10 +755,10 @@
     }
    ],
    "source": [
-    "print(motor_logs)\n",
-    "logs_COLUMNS = [\"Time\", \"T1\", \"T2\", \"t1\", \"t2\", \"q1\", \"q2\", \"x\", \"y\", \"Fx\", \"Fy\", \"FT\"]\n",
+    "print(logs)\n",
+    "logs_COLUMNS = [\"Time\", \"T1\", \"T2\", \"t1\", \"t2\", \"q1\", \"q2\", \"x\", \"y\", \"Fx\", \"Fy\", \"Fx_Mea\", \"Fy_Mea\"]\n",
     "\n",
-    "logs_arrays = np.array([np.array(item) for item in motor_logs])\n",
+    "logs_arrays = np.array([np.array(item) for item in logs])\n",
     "\n",
     "logs_arrays_transpose = logs_arrays.transpose()\n",
     "df = pd.DataFrame([])\n",
