Add Arduino Code

--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -378,7 +378,7 @@
     "    start_time = dt.datetime.today().timestamp()\n",
     "\n",
     "    log = list()\n",
-    "    log.append(t)\n",
+    "    log.append(time)\n",
     "\n",
     "    q1_old = q1\n",
     "    q2_old = q2\n",
