--- a/Motor Testing/Motor2 Dynamic 16062023/data.ipynb
+++ b/Motor Testing/Motor2 Dynamic 16062023/data.ipynb
@@ -169,7 +169,7 @@
     "plt.grid()\n",
     "plt.errorbar(x, points[3], yerr=points[4], fmt=\"o\", markersize=\"3\", label=\"Magnitude of Torque\", color=\"green\")\n",
     "plt.plot(x, points[0], linestyle=\"dashed\", label=\"Ideal\")\n",
-    "plt.legend()"
+    "plt.legend()\n"
    ]
   }
  ],
