Trying different things

--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,7 @@
     "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
     "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
     "\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai8\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai9\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai10\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai11\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai12\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai13\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/\")\n",
     "    \n",
     "    readings = task.read()\n",
     "\n",
@@ -64,9 +59,31 @@
    "outputs": [],
    "source": [
     "current_time = time.time()\n",
-    "duration = 10\n",
-    "readings = []\n",
-    "while time.time() < current_time+duration:\n",
+    "DURATION = 5\n",
+    "readings_outside_loop = []\n",
+    "with nidaqmx.Task() as task:\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
+    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
+    "    while time.time() < current_time+DURATION:\n",
+    "        readings_outside_loop.append(task.read())\n",
+    "\n",
+    "output_outside_loop = sensor.convertToFt(readings_outside_loop[0])\n",
+    "print(len(readings_outside_loop))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_time = time.time()\n",
+    "readings_inside_loop = []\n",
+    "while time.time() < current_time+DURATION:\n",
     "    with nidaqmx.Task() as task:\n",
     "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
     "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
@@ -75,16 +92,39 @@
     "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
     "        task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
     "\n",
-    "        readings.append(task.read())\n",
+    "        readings_inside_loop.append(task.read())\n",
     "\n",
-    "output = sensor.convertToFt(readings[0])\n",
-    "readings"
+    "output_inside_loop = sensor.convertToFt(readings_inside_loop[0])\n",
+    "print(len(readings_inside_loop))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_time = time.time()\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
