--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -214,11 +214,7 @@
     "\n",
     "readings_multi_read_many = np.array([np.array(channel) for channel in values_read]).transpose()\n",
     "readings_multi_read_many = np.array([sensor.convertToFt(reading.tolist()) for reading in readings_multi_read_many])\n",
-    "\n",
-    "print(\"Shape size: \", readings_multi_read_many.shape)\n",
-    "std_readings_multi_read_many = readings_multi_read_many.transpose()[0].std()\n",
-    "print(\"Standard Deviation of Force X (N): \", std_readings_multi_read_many)\n",
-    "avg_readings_multi_read_many = readings_multi_read_many.transpose()[0].mean()\n",
+    "lti_read_many = readings_multi_read_many.transpose()[0].mean()\n",
     "print(\"Average of Force X (N): \", avg_readings_multi_read_many)"
    ]
   },
