--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -13,7 +13,10 @@
     "from nidaqmx.stream_readers import AnalogMultiChannelReader\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from nidaqmx.constants import AcquisitionType"
+    "from nidaqmx.constants import AcquisitionType\n",
+    "\n",
+    "def avg(lst):\n",
+    "    return sum(lst) / len(lst)"
    ]
   },
   {
@@ -231,8 +234,6 @@
     "readings_multi_read_many_fliter = []\n",
     "\n",
     "with nidaqmx.Task() as read_task:\n",
-    "    read_task.ai_channels.ai_lowpass_cutoff_freq = 235\n",
-    "    read_task.ai_channels.ai_lowpass_enable = True\n",
     "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
     "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
     "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
@@ -251,15 +252,14 @@
     "    reader.read_many_sample(data=values_read, number_of_samples_per_channel=samples_to_acq, timeout=11)\n",
     "    test_time = time.time()\n",
     "    print(\"time passed: \", test_time-current_time,\"(s)\")\n",
-    "    read_task.ai_channels.ai_lowpass_enable = False\n",
     "\n",
-    "readings_multi_read_many_fliter = np.array([np.array(channel) for channel in values_read]).transpose()\n",
-    "readings_multi_read_many_fliter = np.array([sensor.convertToFt(reading.tolist()) for reading in readings_multi_read_many])\n",
+    "# readings_multi_read_many_fliter = np.array([np.array(channel) for channel in values_read]).transpose()\n",
+    "# readings_multi_read_many_fliter = np.array([sensor.convertToFt(reading.tolist()) for reading in readings_multi_read_many])\n",
     "\n",
-    "std_readings_multi_read_many_fliter = readings_multi_read_many_fliter.transpose()[0].std()\n",
-    "print(\"Standard Deviation of Force X (N): \", std_readings_multi_read_many_fliter)\n",
-    "avg_readings_multi_read_many_fliter = readings_multi_read_many_fliter.transpose()[0].mean()\n",
-    "print(\"Average of Force X (N): \", avg_readings_multi_read_many_fliter)"
+    "# std_readings_multi_read_many_fliter = readings_multi_read_many_fliter.transpose()[0].std()\n",
+    "# print(\"Standard Deviation of Force X (N): \", std_readings_multi_read_many_fliter)\n",
+    "# avg_readings_multi_read_many_fliter = readings_multi_read_many_fliter.transpose()[0].mean()\n",
+    "# print(\"Average of Force X (N): \", avg_readings_multi_read_many_fliter)"
    ]
   },
   {
