--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from nidaqmx.constants import AcquisitionType\n",
+    "from pprint import pprint\n",
     "\n",
     "def avg(lst):\n",
     "    return sum(lst) / len(lst)"
@@ -21,32 +22,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CALFILEPATH = \"..\\FT44764\\FT44764.cal\"\n",
-    "INDEX = 1\n",
+    "CHANNEL_NUM = 6\n",
+    "SAMPLING_FREQ = 6400\n",
+    "READ_FREQ = 64\n",
+    "SAMPLE_NUM = SAMPLING_FREQ//READ_FREQ\n",
+    "values = np.zeros((CHANNEL_NUM, SAMPLE_NUM), dtype=np.float64)\n",
     "\n",
-    "with nidaqmx.Task() as task:\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
-    "    task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
-    "    \n",
-    "    readings = task.read()\n",
-    "\n",
-    "sampleTT = [0,0,0,0,0,0]\n",
+    "DURATION = 5\n",
     "\n",
     "sensor = ati.FTSensor()\n",
-    "cal = sensor.createCalibration(CALFILEPATH, INDEX)\n",
     "sensor.setForceUnits(\"N\".encode(\"utf-8\"))\n",
     "sensor.setTorqueUnits(\"N-m\".encode(\"utf-8\"))\n",
-    "sensor.setToolTransform(sampleTT, \"mm\".encode(\"utf-8\"), \"deg\".encode(\"utf-8\"))\n",
     "\n",
-    "DURATION = 5"
+    "CALFILEPATH = \"..\\FT44764\\FT44764.cal\"\n",
+    "INDEX = 1\n",
+    "cal = sensor.createCalibration(CALFILEPATH, INDEX)\n",
+    "\n",
+    "TOOL_OFFSET = [0,0,0,0,0,0]\n",
+    "sensor.setToolTransform(TOOL_OFFSET, \"mm\".encode(\"utf-8\"), \"deg\".encode(\"utf-8\"))\n",
+    "\n",
+    "with nidaqmx.Task() as task:\n",
+    "    for i in range(CHANNEL_NUM):\n",
+    "        task.ai_channels.add_ai_voltage_chan(f\"Dev1/ai{i}\")\n",
+    "\n",
+    "    cont_mode = AcquisitionType.CONTINUOUS\n",
+    "    task.timing.cfg_samp_clk_timing(SAMPLING_FREQ, sample_mode = cont_mode, samps_per_chan = SAMPLE_NUM)\n",
+    "    reader = AnalogMultiChannelReader(task.in_stream)\n",
+    "    \n",
+    "    readings = task.read(number_of_samples_per_channel=100)\n",
+    "    reader.read_many_sample(data=values, number_of_samples_per_channel=SAMPLE_NUM, timeout=1/READ_FREQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint(readings)\n",
+    "pprint(values)"
    ]
   },
   {
@@ -337,7 +355,32 @@
     }
    ],
    "source": [
-    "print((final_readings[0]))"
+    "sample_rate = 6400\n",
+    "samples_read = 100\n",
+    "\n",
+    "with nidaqmx.Task() as read_task:\n",
+    "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai0\")\n",
+    "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai1\")\n",
+    "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai2\")\n",
+    "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai3\")\n",
+    "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai4\")\n",
+    "    read_task.ai_channels.add_ai_voltage_chan(\"Dev1/ai5\")\n",
+    "    \n",
+    "    read_task.timing.cfg_samp_clk_timing(sample_rate, sample_mode = AcquisitionType.CONTINUOUS, samps_per_chan = samples_read)               \n",
+    "    \n",
+    "    read_task.start()\n",
+    "    reading = task.read(number_of_samples_per_channel=samples_read)\n",
+    "    read_task.stop()\n",
+    "    print(readings)\n",
+    "\n",
+    "final_readings = [[avg(sample) for sample in channel] for channel in np.reshape(values_read, (6, 32000//100,100))]\n",
+    "\n",
+    "final_ft = np.array([sensor.convertToFt([final_readings[i][j] for i in range(len(final_readings))]) for j in range(len(final_readings[0]))])\n",
+    "\n",
+    "std_final_ft = final_ft.transpose()[0].std()\n",
+    "print(\"Standard Deviation of Force X (N): \", std_final_ft)\n",
+    "avg_final_ft = final_ft.transpose()[0].mean()\n",
+    "print(\"Average of Force X (N): \", avg_final_ft)"
    ]
   },
   {
