--- a/Python sensor/Sensor_testing.ipynb
+++ b/Python sensor/Sensor_testing.ipynb
@@ -14,17 +14,136 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from nidaqmx.constants import AcquisitionType\n",
-    "from pprint import pprint\n",
+    "from pprint import pprint"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "start_task\n",
+    "close_task\n",
     "\n",
-    "def avg(lst):\n",
-    "    return sum(lst) / len(lst)"
+    "read_raw_voltage\n",
+    "read_avg_voltage\n",
+    "read_raw_ft\n",
+    "read_avg_ft\n",
+    "\n",
+    "set_bias(bias=None)\n",
+    "\n",
+    "set_channel_number\n",
+    "set_sampling_freq\n",
+    "set_read_freq\n",
+    "\n",
+    "get_calibration_file_path\n",
+    "get_tool_offset\n",
+    "get_channel_number\n",
+    "get_sampling_freq\n",
+    "get_read_freq\n",
+    "get_sample_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class ftsensor:\n",
+    "    def __avg(lst):\n",
+    "        return sum(lst) / len(lst)\n",
+    "\n",
+    "    def __init__(self, calibration_file_path=\"..\\FT44764\\FT44764.cal\", tool_offset=[0,0,0,0,0,0]):\n",
+    "        self.calibration_file_path = calibration_file_path\n",
+    "        self.tool_offset = tool_offset\n",
+    "        self.channel_number = 6\n",
+    "        self.sampling_freq = 6400\n",
+    "        self.read_freq = 64\n",
+    "        self.sample_number = self.sampling_freq//self.read_freq\n",
+    "        self.raw_readings = np.zeros((self.channel_number, self.sample_number), dtype=np.float64)\n",
+    "        \n",
+    "        self.sensor = ati.FTSensor()\n",
+    "        self.calibrate(calibration_file_path=self.calibration_file_path)\n",
+    "        self.set_tool(self.tool_offset)\n",
+    "\n",
+    "    def calibrate(self, calibration_file_path):\n",
+    "        self.sensor.createCalibration(calibration_file_path, 1)\n",
+    "        self.sensor.setForceUnits(\"N\".encode(\"utf-8\"))\n",
+    "        self.sensor.setTorqueUnits(\"N-m\".encode(\"utf-8\"))\n",
+    "        \n",
+    "    def set_tool(self, tool_offset):\n",
+    "        self.sensor.setToolTransform(tool_offset, \"mm\".encode(\"utf-8\"), \"deg\".encode(\"utf-8\"))\n",
+    "\n",
+    "    def start_task(self):\n",
+    "        self.task = nidaqmx.Task()\n",
+    "        for i in range(self.channel_number):\n",
+    "            self.task.ai_channels.add_ai_voltage_chan(f\"Dev1/ai{i}\")\n",
+    "        self.task.timing.cfg_samp_clk_timing(self.sampling_freq, sample_mode = AcquisitionType.CONTINUOUS, samps_per_chan = self.sample_number)\n",
+    "        self.reader = AnalogMultiChannelReader(self.task.in_stream)\n",
+    "    \n",
+    "    def close_task(self):\n",
+    "        self.task.close()\n",
+    "\n",
+    "    def read_raw_voltage(self):\n",
+    "        self.reader.read_many_sample(data=self.raw_readings, number_of_samples_per_channel=self.sample_number, timeout=1/self.read_freq)\n",
+    "        return self.raw_readings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\andyb\\appdata\\local\\programs\\python\\python310\\lib\\site-packages\\nidaqmx\\task.py:97: ResourceWarning: Task of name \"_unnamedTask<3>\" was not explicitly closed before it was destructed. Resources on the task device may still be reserved.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "DaqError",
+     "evalue": "Device cannot be accessed.  Possible causes:\nDevice is no longer present in the system.\nDevice is not powered.\nDevice is powered, but was temporarily without power.\nDevice and/or chassis driver support may have been removed.\nDevice is damaged.\nEnsure the device is properly connected and turned on. Ensure the device and/or chassis is supported in the current version of the driver. Check the device's status in NI MAX. Turn the computer off and on again. If you suspect that the device is damaged, contact National Instruments at ni.com/support.\nDevice Specified: Dev1\n\nTask Name: _unnamedTask<4>\n\nStatus Code: -201003",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mDaqError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\andyb\\Documents\\Desktop_Rehab\\Python sensor\\Sensor_testing.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sensor \u001b[39m=\u001b[39m ftsensor()\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m sensor\u001b[39m.\u001b[39;49mstart_task()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(sensor\u001b[39m.\u001b[39mread_raw_voltage())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m sensor\u001b[39m.\u001b[39mclose_task()\n",
+      "\u001b[1;32mc:\\Users\\andyb\\Documents\\Desktop_Rehab\\Python sensor\\Sensor_testing.ipynb Cell 4\u001b[0m in \u001b[0;36mftsensor.start_task\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask \u001b[39m=\u001b[39m nidaqmx\u001b[39m.\u001b[39mTask()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchannel_number):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtask\u001b[39m.\u001b[39;49mai_channels\u001b[39m.\u001b[39;49madd_ai_voltage_chan(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mDev1/ai\u001b[39;49m\u001b[39m{\u001b[39;49;00mi\u001b[39m}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask\u001b[39m.\u001b[39mtiming\u001b[39m.\u001b[39mcfg_samp_clk_timing(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msampling_freq, sample_mode \u001b[39m=\u001b[39m AcquisitionType\u001b[39m.\u001b[39mCONTINUOUS, samps_per_chan \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msample_number)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#X15sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreader \u001b[39m=\u001b[39m AnalogMultiChannelReader(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtask\u001b[39m.\u001b[39min_stream)\n",
+      "File \u001b[1;32mc:\\users\\andyb\\appdata\\local\\programs\\python\\python310\\lib\\site-packages\\nidaqmx\\_task_modules\\ai_channel_collection.py:2603\u001b[0m, in \u001b[0;36mAIChannelCollection.add_ai_voltage_chan\u001b[1;34m(self, physical_channel, name_to_assign_to_channel, terminal_config, min_val, max_val, units, custom_scale_name)\u001b[0m\n\u001b[0;32m   2594\u001b[0m             cfunc\u001b[39m.\u001b[39margtypes \u001b[39m=\u001b[39m [\n\u001b[0;32m   2595\u001b[0m                 lib_importer\u001b[39m.\u001b[39mtask_handle, ctypes_byte_str,\n\u001b[0;32m   2596\u001b[0m                 ctypes_byte_str, ctypes\u001b[39m.\u001b[39mc_int, ctypes\u001b[39m.\u001b[39mc_double,\n\u001b[0;32m   2597\u001b[0m                 ctypes\u001b[39m.\u001b[39mc_double, ctypes\u001b[39m.\u001b[39mc_int, ctypes_byte_str]\n\u001b[0;32m   2599\u001b[0m error_code \u001b[39m=\u001b[39m cfunc(\n\u001b[0;32m   2600\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_handle, physical_channel, name_to_assign_to_channel,\n\u001b[0;32m   2601\u001b[0m     terminal_config\u001b[39m.\u001b[39mvalue, min_val, max_val, units\u001b[39m.\u001b[39mvalue,\n\u001b[0;32m   2602\u001b[0m     custom_scale_name)\n\u001b[1;32m-> 2603\u001b[0m check_for_error(error_code)\n\u001b[0;32m   2605\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_create_chan(physical_channel, name_to_assign_to_channel)\n",
+      "File \u001b[1;32mc:\\users\\andyb\\appdata\\local\\programs\\python\\python310\\lib\\site-packages\\nidaqmx\\errors.py:183\u001b[0m, in \u001b[0;36mcheck_for_error\u001b[1;34m(error_code, samps_per_chan_written, samps_per_chan_read)\u001b[0m\n\u001b[0;32m    181\u001b[0m         \u001b[39mraise\u001b[39;00m DaqWriteError(error_buffer\u001b[39m.\u001b[39mvalue\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m), error_code, samps_per_chan_written)\n\u001b[0;32m    182\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 183\u001b[0m         \u001b[39mraise\u001b[39;00m DaqError(error_buffer\u001b[39m.\u001b[39mvalue\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m), error_code)\n\u001b[0;32m    185\u001b[0m \u001b[39melif\u001b[39;00m error_code \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    186\u001b[0m     error_buffer \u001b[39m=\u001b[39m ctypes\u001b[39m.\u001b[39mcreate_string_buffer(\u001b[39m2048\u001b[39m)\n",
+      "\u001b[1;31mDaqError\u001b[0m: Device cannot be accessed.  Possible causes:\nDevice is no longer present in the system.\nDevice is not powered.\nDevice is powered, but was temporarily without power.\nDevice and/or chassis driver support may have been removed.\nDevice is damaged.\nEnsure the device is properly connected and turned on. Ensure the device and/or chassis is supported in the current version of the driver. Check the device's status in NI MAX. Turn the computer off and on again. If you suspect that the device is damaged, contact National Instruments at ni.com/support.\nDevice Specified: Dev1\n\nTask Name: _unnamedTask<4>\n\nStatus Code: -201003"
+     ]
+    }
+   ],
+   "source": [
+    "sensor = ftsensor()\n",
+    "sensor.start_task()\n",
+    "print(sensor.read_raw_voltage())\n",
+    "sensor.close_task()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DaqError",
+     "evalue": "Device cannot be accessed.  Possible causes:\nDevice is no longer present in the system.\nDevice is not powered.\nDevice is powered, but was temporarily without power.\nDevice and/or chassis driver support may have been removed.\nDevice is damaged.\nEnsure the device is properly connected and turned on. Ensure the device and/or chassis is supported in the current version of the driver. Check the device's status in NI MAX. Turn the computer off and on again. If you suspect that the device is damaged, contact National Instruments at ni.com/support.\nDevice Specified: Dev1\n\nTask Name: _unnamedTask<1>\n\nStatus Code: -201003",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mDaqError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\andyb\\Documents\\Desktop_Rehab\\Python sensor\\Sensor_testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 21>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W1sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mwith\u001b[39;00m nidaqmx\u001b[39m.\u001b[39mTask() \u001b[39mas\u001b[39;00m task:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W1sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(CHANNEL_NUM):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W1sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m         task\u001b[39m.\u001b[39;49mai_channels\u001b[39m.\u001b[39;49madd_ai_voltage_chan(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mDev1/ai\u001b[39;49m\u001b[39m{\u001b[39;49;00mi\u001b[39m}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W1sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     task\u001b[39m.\u001b[39mtiming\u001b[39m.\u001b[39mcfg_samp_clk_timing(SAMPLING_FREQ, sample_mode \u001b[39m=\u001b[39m AcquisitionType\u001b[39m.\u001b[39mCONTINUOUS, samps_per_chan \u001b[39m=\u001b[39m SAMPLE_NUM)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/andyb/Documents/Desktop_Rehab/Python%20sensor/Sensor_testing.ipynb#W1sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     reader \u001b[39m=\u001b[39m AnalogMultiChannelReader(task\u001b[39m.\u001b[39min_stream)\n",
+      "File \u001b[1;32mc:\\users\\andyb\\appdata\\local\\programs\\python\\python310\\lib\\site-packages\\nidaqmx\\_task_modules\\ai_channel_collection.py:2603\u001b[0m, in \u001b[0;36mAIChannelCollection.add_ai_voltage_chan\u001b[1;34m(self, physical_channel, name_to_assign_to_channel, terminal_config, min_val, max_val, units, custom_scale_name)\u001b[0m\n\u001b[0;32m   2594\u001b[0m             cfunc\u001b[39m.\u001b[39margtypes \u001b[39m=\u001b[39m [\n\u001b[0;32m   2595\u001b[0m                 lib_importer\u001b[39m.\u001b[39mtask_handle, ctypes_byte_str,\n\u001b[0;32m   2596\u001b[0m                 ctypes_byte_str, ctypes\u001b[39m.\u001b[39mc_int, ctypes\u001b[39m.\u001b[39mc_double,\n\u001b[0;32m   2597\u001b[0m                 ctypes\u001b[39m.\u001b[39mc_double, ctypes\u001b[39m.\u001b[39mc_int, ctypes_byte_str]\n\u001b[0;32m   2599\u001b[0m error_code \u001b[39m=\u001b[39m cfunc(\n\u001b[0;32m   2600\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_handle, physical_channel, name_to_assign_to_channel,\n\u001b[0;32m   2601\u001b[0m     terminal_config\u001b[39m.\u001b[39mvalue, min_val, max_val, units\u001b[39m.\u001b[39mvalue,\n\u001b[0;32m   2602\u001b[0m     custom_scale_name)\n\u001b[1;32m-> 2603\u001b[0m check_for_error(error_code)\n\u001b[0;32m   2605\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_create_chan(physical_channel, name_to_assign_to_channel)\n",
+      "File \u001b[1;32mc:\\users\\andyb\\appdata\\local\\programs\\python\\python310\\lib\\site-packages\\nidaqmx\\errors.py:183\u001b[0m, in \u001b[0;36mcheck_for_error\u001b[1;34m(error_code, samps_per_chan_written, samps_per_chan_read)\u001b[0m\n\u001b[0;32m    181\u001b[0m         \u001b[39mraise\u001b[39;00m DaqWriteError(error_buffer\u001b[39m.\u001b[39mvalue\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m), error_code, samps_per_chan_written)\n\u001b[0;32m    182\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 183\u001b[0m         \u001b[39mraise\u001b[39;00m DaqError(error_buffer\u001b[39m.\u001b[39mvalue\u001b[39m.\u001b[39mdecode(\u001b[39m\"\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m\"\u001b[39m), error_code)\n\u001b[0;32m    185\u001b[0m \u001b[39melif\u001b[39;00m error_code \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m    186\u001b[0m     error_buffer \u001b[39m=\u001b[39m ctypes\u001b[39m.\u001b[39mcreate_string_buffer(\u001b[39m2048\u001b[39m)\n",
+      "\u001b[1;31mDaqError\u001b[0m: Device cannot be accessed.  Possible causes:\nDevice is no longer present in the system.\nDevice is not powered.\nDevice is powered, but was temporarily without power.\nDevice and/or chassis driver support may have been removed.\nDevice is damaged.\nEnsure the device is properly connected and turned on. Ensure the device and/or chassis is supported in the current version of the driver. Check the device's status in NI MAX. Turn the computer off and on again. If you suspect that the device is damaged, contact National Instruments at ni.com/support.\nDevice Specified: Dev1\n\nTask Name: _unnamedTask<1>\n\nStatus Code: -201003"
+     ]
+    }
+   ],
    "source": [
     "CHANNEL_NUM = 6\n",
     "SAMPLING_FREQ = 6400\n",
@@ -35,12 +154,13 @@
     "DURATION = 5\n",
     "\n",
     "sensor = ati.FTSensor()\n",
-    "sensor.setForceUnits(\"N\".encode(\"utf-8\"))\n",
-    "sensor.setTorqueUnits(\"N-m\".encode(\"utf-8\"))\n",
     "\n",
     "CALFILEPATH = \"..\\FT44764\\FT44764.cal\"\n",
     "INDEX = 1\n",
     "cal = sensor.createCalibration(CALFILEPATH, INDEX)\n",
+    "\n",
+    "sensor.setForceUnits(\"N\".encode(\"utf-8\"))\n",
+    "sensor.setTorqueUnits(\"N-m\".encode(\"utf-8\"))\n",
     "\n",
     "TOOL_OFFSET = [0,0,0,0,0,0]\n",
     "sensor.setToolTransform(TOOL_OFFSET, \"mm\".encode(\"utf-8\"), \"deg\".encode(\"utf-8\"))\n",
@@ -49,11 +169,9 @@
     "    for i in range(CHANNEL_NUM):\n",
     "        task.ai_channels.add_ai_voltage_chan(f\"Dev1/ai{i}\")\n",
     "\n",
-    "    cont_mode = AcquisitionType.CONTINUOUS\n",
-    "    task.timing.cfg_samp_clk_timing(SAMPLING_FREQ, sample_mode = cont_mode, samps_per_chan = SAMPLE_NUM)\n",
+    "    task.timing.cfg_samp_clk_timing(SAMPLING_FREQ, sample_mode = AcquisitionType.CONTINUOUS, samps_per_chan = SAMPLE_NUM)\n",
     "    reader = AnalogMultiChannelReader(task.in_stream)\n",
     "    \n",
-    "    readings = task.read(number_of_samples_per_channel=100)\n",
     "    reader.read_many_sample(data=values, number_of_samples_per_channel=SAMPLE_NUM, timeout=1/READ_FREQ)"
    ]
   },
@@ -62,10 +180,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pprint(readings)\n",
-    "pprint(values)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -278,7 +393,7 @@
     "    test_time = time.time()\n",
     "    print(\"time passed: \", test_time-current_time,\"(s)\")\n",
     "\n",
-    "final_readings = [[avg(sample) for sample in channel] for channel in np.reshape(values_read, (6, 32000//100,100))]\n",
+    "final_readings = [[__avg(sample) for sample in channel] for channel in np.reshape(values_read, (6, 32000//100,100))]\n",
     "\n",
     "final_ft = np.array([sensor.convertToFt([final_readings[i][j] for i in range(len(final_readings))]) for j in range(len(final_readings[0]))])\n",
     "\n",
@@ -373,7 +488,7 @@
     "    read_task.stop()\n",
     "    print(readings)\n",
     "\n",
-    "final_readings = [[avg(sample) for sample in channel] for channel in np.reshape(values_read, (6, 32000//100,100))]\n",
+    "final_readings = [[__avg(sample) for sample in channel] for channel in np.reshape(values_read, (6, 32000//100,100))]\n",
     "\n",
     "final_ft = np.array([sensor.convertToFt([final_readings[i][j] for i in range(len(final_readings))]) for j in range(len(final_readings[0]))])\n",
     "\n",
